--- a/Web.Statu/Views/Manage/Index.cshtml
+++ b/Web.Statu/Views/Manage/Index.cshtml
@@ -221,7 +221,7 @@
                                 <label for="img" class="col-xs-2 control-label">pomer stran</label>
                                 <div class="col-xs-10" style="border-bottom: 1px solid gray;">
                                     <select class="form-control--240" style="width:80px;" name="rat"><option value="16x9">16x9</option><option value="1x1">1x1</option></select>
-                                    <select class="form-control--240" style="width:80px;" name="color">
+                                    <select class="form-control--240" style="width:80px;" name="col">
                                         <option value="blue-dark">blue-dark</option>
                                         <option value="blue-light">blue-light</option>
                                         <option value="green">green</option>
