small text fixes

--- a/Web.Statu/App_Code/SearchResults.cshtml
+++ b/Web.Statu/App_Code/SearchResults.cshtml
@@ -171,7 +171,7 @@
         <th title="Publikující smluvní strana">Plátce</th>
         <th title="Smluvní strana/y">Dodavatel/é</th>
         <th>Popis smlouvy</th>
-        <th>Hodnota smlouvy</th>
+        <th>Maximální hodnota<br/>smlouvy s DPH</th>
         @if (user.IsInRole("BetaTester"))
         {
             <th>Klasifikace</th>
