--- a/Web.Statu/Views/Home/ImageBannerCore16x9_quote.cshtml
+++ b/Web.Statu/Views/Home/ImageBannerCore16x9_quote.cshtml
@@ -167,7 +167,7 @@
 
 
         <div class="jtextfill" style="position: absolute;top: 125px;left:170px;width: 1570px;height: 600px;
-background-color:rgba(222,222,222,0.7);
+/*background-color:rgba(222,222,222,0.7);*/
 ">
 
             <span class="mytxt">
