dataset search fixes

--- a/Web.Statu/Views/Data/Index.cshtml
+++ b/Web.Statu/Views/Data/Index.cshtml
@@ -206,10 +206,10 @@
             </div>
         </div>
 
-    }
-    catch (Exception)
-    {
-
-    }
+}
+catch (Exception e)
+{
+    HlidacStatu.Util.Consts.Logger.Error("Render Dataset Index ", e);
+}
 
 }
