--- a/Web.Statu/Views/Home/IndexHlidacStatu.cshtml
+++ b/Web.Statu/Views/Home/IndexHlidacStatu.cshtml
@@ -24,10 +24,10 @@
                     foreach (var post in HlidacStatu.Lib.StaticData.LastBlogPosts.Get().Take(8))
                     {
                         <dl>
-                            <dt><a href="@post.link">@Devmasters.Core.TextUtil.RemoveHTML(System.Net.WebUtility.HtmlDecode(post.title.rendered))</a></dt>
-                            <dd><em>@post.date.ToString("d. MMMM yyyy")</em></dd>
+                            <dt><a href="@post.Link">@Devmasters.Core.TextUtil.RemoveHTML(System.Net.WebUtility.HtmlDecode(post.Title.Rendered))</a></dt>
+                            <dd><em>@(post.Date?.ToString("d. MMMM yyyy"))</em></dd>
                             <dd>
-                                @Devmasters.Core.TextUtil.RemoveHTML(System.Net.WebUtility.HtmlDecode(post.excerpt.rendered))
+                                @Devmasters.Core.TextUtil.RemoveHTML(System.Net.WebUtility.HtmlDecode(post.Excerpt.Rendered))
                             </dd>
                         </dl>
                     }
